@@ -1,3 +1,9 @@
+2012-01-31  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-goto-*): Make all the `message-goto-*' commands
+	push the mark before moving point.  This makes it easier to go back to
+	where you came from after editing whatever you jumped to.
+
 2012-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>
 
 	* gnus.el: Ma Gnus v0.1 is released.
